@@ -3,6 +3,8 @@ CHANGES.txt - 02/22/2006
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The HP-GL/2 filter could get in an infinite loop trying
+	  to convert HP-PCL files (STR #1415)
 	- CUPS now implements the HTTP/1.1 Expect header (STR
 	  #1407)
 	- Options in PPD files are no longer automatically put in
